integration of dummy data for program list. implementation of Outlet equivalent and dynamic routing

--- a/src/app/(Authentication)/SignUp/category-selector/CategorySelector.module.scss
+++ b/src/app/(Authentication)/SignUp/category-selector/CategorySelector.module.scss
@@ -44,16 +44,12 @@
         }
 
         .iconDiv {
-          width: 5rem;
-
-          .categoryIcon {
-            width: 100%;
-            object-fit: cover;
-          }
+          width: auto;
         }
 
         .content {
           gap: 0.5rem;
+          flex-grow: 1;
 
           .title {
             font-size: 1.25rem;
@@ -72,10 +68,11 @@
           }
         }
 
-        .icon {
-          width: 1.5rem;
-          object-fit: cover;
-          margin-left: auto;
+        .arrowDiv {
+          svg {
+            width: 1.25rem;
+            height: 100%;
+          }
         }
       }
     }
@@ -144,8 +141,7 @@
 
       .selectorDiv {
         .cardWrapper {
-          gap: 1.5rem;
-          padding: 1rem 1.5rem;
+          gap: 1rem;
         }
       }
     }
