--- a/src/app/Dashboard/Programs/create-program/CreateProgram.module.scss
+++ b/src/app/Dashboard/Programs/create-program/CreateProgram.module.scss
@@ -153,7 +153,7 @@
       width: 100%;
       justify-content: flex-end;
       gap: 1rem;
-      min-height: 3rem;
+      min-height: 2rem;
 
       .searchWrapper {
         flex-grow: 1;
@@ -192,6 +192,7 @@
 
     .mainSection {
       gap: 2.5rem;
+      padding-top: 0.625rem;
 
       .formWrapper {
         form {
