--- a/src/app/Dashboard/Programs/(main)/program-details/[id]/ProgramDetails.module.scss
+++ b/src/app/Dashboard/Programs/(main)/program-details/[id]/ProgramDetails.module.scss
@@ -11,16 +11,33 @@
     .wrapper {
       gap: 0.75rem;
 
+      .iconDiv {
+        .programIcon {
+          width: 3rem;
+          height: 3rem;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+
+        .initials {
+          font-size: 1.25rem;
+          color: var(--primaryTextColor);
+          font-family: var(--muktaRegular);
+          display: inline-block;
+          border-radius: 50%;
+          width: 3rem;
+          height: 3rem;
+          line-height: 3rem;
+          text-align: center;
+          margin: 0;
+          background-color: var(--green4Color);
+          cursor: pointer;
+        }
+      }
+
       .icon {
         width: 3rem;
         align-self: flex-start;
-      }
-
-      .programIcon {
-        width: 3rem;
-        height: 3rem;
-        object-fit: cover;
-        border-radius: 50%;
       }
 
       .mainContent {
@@ -44,8 +61,8 @@
             align-items: center;
             gap: 0.25rem;
 
-            .icon {
-              width: 1rem;
+            svg {
+              width: auto;
             }
 
             .value {
@@ -183,13 +200,15 @@
   .programDetailsContainer {
     .header {
       .wrapper {
-        .icon {
-          width: 2.25rem;
-        }
+        .iconDiv {
+          .icon {
+            width: 2.25rem;
+          }
 
-        .programIcon {
-          width: 2.25rem;
-          height: 2.25rem;
+          .programIcon {
+            width: 2.25rem;
+            height: 2.25rem;
+          }
         }
 
         .mainContent {
