--- a/src/app/Dashboard/Programs/(main)/layout.module.scss
+++ b/src/app/Dashboard/Programs/(main)/layout.module.scss
@@ -99,6 +99,7 @@
       border: 1px solid #e6e6e6;
       border-radius: 0.25rem;
       width: 100%;
+      height: 100%;
       // margin: 0.5rem;
 
       .emptySelectionDiv {
