--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -35,13 +35,13 @@
   --imageBorderColor: #035d6339;
 
   // Fonts
-  --muktaBold: var(--muktaBold);
-  --muktaExtraBold: var(--muktaExtraBold);
-  --muktaExtraLight: var(--muktaExtraLight);
-  --muktaLight: var(--muktaLight);
-  --muktaMedium: var(--muktaMedium);
-  --muktaRegular: var(--muktaRegular);
-  --muktaSemiBold: var(--muktaSemiBold);
+  // --muktaBold: var(--muktaBold);
+  // --muktaExtraBold: var(--muktaExtraBold);
+  // --muktaExtraLight: var(--muktaExtraLight);
+  // --muktaLight: var(--muktaLight);
+  // --muktaMedium: var(--muktaMedium);
+  // --muktaRegular: var(--muktaRegular);
+  // --muktaSemiBold: var(--muktaSemiBold);
 
   // Primary Button Big
   --primaryBtnBg: #058b94;
