--- a/src/app/Dashboard/Tasks/(main)/TasksLayout.module.scss
+++ b/src/app/Dashboard/Tasks/(main)/TasksLayout.module.scss
@@ -167,7 +167,7 @@
 
       .sideBarHeader {
         padding: 0;
-        margin: 0.875rem 0 0 0;
+        margin: 0.875rem 0 0.75rem 0;
       }
     }
 
@@ -203,6 +203,12 @@
 
 @media all and (min-width: 1200px) {
   .tasksContainer {
+    .sidebarWrapper {
+      .sideBarHeader {
+        margin: 0.875rem 0 0.5rem 0;
+      }
+    }
+
     .mainBody {
       gap: 0.75rem;
     }
