main tasks page plus layout completed. notification modals also refactored

--- a/src/app/Dashboard/Programs/(main)/program-details/[id]/ProgramDetails.module.scss
+++ b/src/app/Dashboard/Programs/(main)/program-details/[id]/ProgramDetails.module.scss
@@ -168,6 +168,12 @@
       font-family: var(--muktaRegular);
       gap: 0.5rem;
       cursor: pointer;
+
+      svg {
+        path {
+          stroke: var(--primaryRedColor);
+        }
+      }
     }
   }
 }
