--- a/src/app/Dashboard/Programs/ProgramListItem/ProgramListItem.module.scss
+++ b/src/app/Dashboard/Programs/ProgramListItem/ProgramListItem.module.scss
@@ -1,5 +1,4 @@
 .programListItemContainer {
-  padding: 0.25rem 0.5rem;
   background-color: var(--taskListBgColor);
   border-radius: 5px;
   justify-content: center;
@@ -9,11 +8,11 @@
 
   &:hover {
     background-color: var(--green3Color);
-    border: 1px solid var(--green3Color);
   }
 
   .body {
     gap: 0.5rem;
+    padding: 0.25rem 0.5rem;
 
     .iconDiv {
       .icon {
@@ -93,11 +92,15 @@
   }
 }
 
+.activeItem {
+  background-color: var(--green3Color);
+  border: 1px solid #e6fdfe;
+}
+
 @media all and (min-width: 992px) {
   .programListItemContainer {
-    padding: 0.875rem 0.75rem;
-
     .body {
+      padding: 0.875rem 0.75rem;
       gap: 1rem;
 
       .iconDiv {
