--- a/src/app/Dashboard/Tasks/(main)/task-details/[id]/TaskDetails.module.scss
+++ b/src/app/Dashboard/Tasks/(main)/task-details/[id]/TaskDetails.module.scss
@@ -11,6 +11,30 @@
     .wrapper {
       gap: 0.75rem;
 
+      .iconDiv {
+        .taskIcon {
+          width: 3rem;
+          height: 3rem;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+
+        .initials {
+          font-size: 1.25rem;
+          color: var(--primaryTextColor);
+          font-family: var(--muktaRegular);
+          display: inline-block;
+          border-radius: 50%;
+          width: 3rem;
+          height: 3rem;
+          line-height: 3rem;
+          text-align: center;
+          margin: 0;
+          background-color: var(--green4Color);
+          cursor: pointer;
+        }
+      }
+
       .icon {
         width: 3rem;
         align-self: flex-start;
@@ -35,8 +59,8 @@
           line-height: 1;
           align-items: flex-end;
 
-          .dateIcon {
-            width: 1rem;
+          svg {
+            width: auto;
           }
 
           .date {
@@ -136,6 +160,12 @@
       font-family: var(--muktaRegular);
       gap: 0.5rem;
       cursor: pointer;
+
+      svg {
+        path {
+          stroke: var(--primaryRedColor);
+        }
+      }
     }
   }
 }
@@ -170,8 +200,15 @@
   .taskDetailsContainer {
     .header {
       .wrapper {
-        .icon {
-          width: 2.25rem;
+        .iconDiv {
+          .icon {
+            width: 2.25rem;
+          }
+
+          .taskIcon {
+            width: 2.25rem;
+            height: 2.25rem;
+          }
         }
 
         .mainContent {
