edit task module completed

--- a/src/app/Dashboard/Programs/create-program/CreateProgram.module.scss
+++ b/src/app/Dashboard/Programs/create-program/CreateProgram.module.scss
@@ -155,6 +155,10 @@
       gap: 1rem;
       min-height: 2rem;
 
+      .title {
+        margin: 0;
+      }
+
       .searchWrapper {
         flex-grow: 1;
       }
