--- a/src/app/Dashboard/Tasks/edit-task/[id]/EditTask.module.scss
+++ b/src/app/Dashboard/Tasks/edit-task/[id]/EditTask.module.scss
@@ -1,4 +1,4 @@
-.createTaskContainer {
+.editTaskContainer {
   gap: 1rem;
   padding: 1rem 0.5rem;
   position: relative;
@@ -6,17 +6,6 @@
 
   .sideBarSection {
     width: auto;
-
-    .noUserFound {
-      width: 100%;
-
-      h6 {
-        font-family: var(--muktaSemiBold);
-        font-size: 1rem;
-        color: var(--black2TextColor);
-        margin: 0;
-      }
-    }
 
     .filterAndSearchDiv {
       width: 100%;
@@ -36,7 +25,7 @@
       }
 
       .closeIcon {
-        width: 1rem;
+        width: auto;
         cursor: pointer;
       }
     }
@@ -50,8 +39,6 @@
     padding-right: 0.5rem;
 
     .heading {
-      position: sticky;
-      top: 0;
       align-items: flex-end;
 
       .title {
@@ -68,9 +55,6 @@
     }
 
     .formWrapper {
-      overflow-y: auto;
-      padding-right: 0.5rem;
-
       form {
         label {
           font-family: var(--muktaBold);
@@ -132,7 +116,7 @@
 }
 
 @media all and (min-width: 768px) {
-  .createTaskContainer {
+  .editTaskContainer {
     padding: 2rem;
 
     .mainSection {
@@ -150,9 +134,7 @@
 }
 
 @media all and (min-width: 992px) {
-  .createTaskContainer {
-    padding: 1rem 2rem;
-
+  .editTaskContainer {
     .mainSection {
       gap: 2.5rem;
       padding-top: 0.875rem;
