--- a/src/app/Dashboard/Reports/(main)/ReportsLayout.module.scss
+++ b/src/app/Dashboard/Reports/(main)/ReportsLayout.module.scss
@@ -115,7 +115,7 @@
 
 @media all and (min-width: 992px) {
   .reportsContainer {
-    padding: 1rem 2rem 1rem 1rem;
+    padding: 1rem;
 
     .content {
       padding: 0;
