--- a/src/app/Dashboard/Reports/(main)/report-details/[id]/ReportDetails.module.scss
+++ b/src/app/Dashboard/Reports/(main)/report-details/[id]/ReportDetails.module.scss
@@ -32,7 +32,7 @@
   .heading {
     gap: 1rem;
     align-items: flex-start;
-    padding: 1rem 1rem 0 1rem;
+    padding: 0;
 
     .body {
       gap: 1rem;
@@ -49,7 +49,6 @@
           font-family: var(--muktaSemiBold);
           color: var(--black2TextColor);
           margin: 0;
-          line-height: 1;
           overflow: hidden;
           text-overflow: ellipsis;
           display: -webkit-box;
