--- a/src/app/Dashboard/Reports/ReportListItem/ReportListItem.module.scss
+++ b/src/app/Dashboard/Reports/ReportListItem/ReportListItem.module.scss
@@ -8,7 +8,7 @@
 
   &:hover {
     background-color: var(--green3Color);
-    border: 1px solid var(--green3Color);
+    border: 1px solid var(--green4Color);
   }
 
   .body {
@@ -59,5 +59,15 @@
         }
       }
     }
+  }
+}
+
+.activeItem {
+  background-color: var(--green3Color);
+  border: 1px solid #e6fdfe;
+
+  a {
+    color: var(--blackTextColor) !important;
+    font-family: var(--muktaBold);
   }
 }
